crates/toml/tests/snapshots/invalid/key/two-equals-03.stderr
TOML parse error at line 1, column 4
  |
1 | a=b=1
  |    ^
unexpected key or value, expected newline, `#`

---
TOML parse error at line 1, column 3
  |
1 | a=b=1
  |   ^
string values must be quoted, expected literal string
